--- a/homework3/style.css
+++ b/homework3/style.css
@@ -7,7 +7,8 @@ table {
 }
 table, th, td {
     text-align: left;
-    padding: 2px 5px 2px 5px;
+    margin: 15px 10px 25px 0px;
+    padding: 5px;
     border-collapse: collapse;
     color: rgba(15, 15, 15, 0.801);
 }
@@ -30,4 +31,3 @@ th {
 .grey-stripes {
     background-color:#e9e9e9; 
 }
-/* border: 1px solid black; */
