--- a/homework3/style.css
+++ b/homework3/style.css
@@ -10,7 +10,7 @@ table, th, td {
     margin: 15px 10px 25px 0px;
     padding: 5px;
     border-collapse: collapse;
-    color: rgba(15, 15, 15, 0.801);
+    color: #0f0f0f;
 }
 th {
     color: #f6f6f6;
