--- a/homework3/style.css
+++ b/homework3/style.css
@@ -1,20 +1,20 @@
-* {
+body {
     background-color: black;
     font-family: Helvetica, Verdana, sans-serif;
 }
 table {
     width: 100%;
-}
-table, th, td {
-    text-align: left;
-    margin: 15px 10px 25px 0px;
-    padding: 5px;
     border-collapse: collapse;
-    color: #0f0f0f;
+    margin: 15px 10px 25px 0px;
 }
 th {
     color: #f6f6f6;
     font-weight: 700;
+    text-align: left;
+    padding: 5px;
+}
+td {
+    padding: 5px;    
 }
 .red-stripes {
     background-color: #ea6153;
@@ -29,5 +29,5 @@ th {
     background-color: white;
 }
 .grey-stripes {
-    background-color:#e9e9e9; 
+    background-color: #e9e9e9; 
 }
