--- a/homework6/style.css
+++ b/homework6/style.css
@@ -12,36 +12,45 @@
 }
 body {
     font-family: 'Roboto', 'open_sansregular', sans-serif;
+    padding: 0;
+    margin: 0;
 }
-.main {
+header {
     width: 100%;
-    margin: 0 auto;
+}
+.header-nav {
+    width: 100%;
+}
+.menu ul {
+    list-style: none;
+    margin-left: -40px;
+}
+.menu a {
+    text-decoration: none;
+    color: #e84a64;
+    cursor: pointer;
+    font-size: 16px;    
 }
 .header-nav-img {
     background-image: url(header-img.jpg);
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
+    margin-left: 5%;
     float: left;
 }
 .header-nav-menu {
     float: right;
     padding-bottom: 50px; 
 }
-.header-nav-menu ul {
-    list-style: none;
-    margin-left: -40px;
-}
 .header-nav-menu li {
     display: inline-block;
 }
 .header-nav-menu a {
-    text-decoration: none;
-    color: #e84a64;
-    cursor: pointer;
-    font-size: 16px;
     padding: 10px 30px;
 }
-.clear {
+.clearfix {
+    content: '';
+    display: table;
     clear: both;
 }
 .header-text h1 {
@@ -55,32 +64,29 @@ body {
     height: 100%;
     background-color: rgba(44, 44, 53, 0.658);
     position: relative;
+    padding-right: 5%;
+    padding-top: 5%
+
 }
 .content-img {
-    margin: 40px 11px;
-    width: 31%;
+    width: 28.3%;
     height: 400px;
     float: left;
+    margin-left: 5%;
+    margin-bottom: 5%;
     background-image: url(content-img.jpg);
 }
 .fixed-menu {
-    width: 400px;
-    height: 340px;
+    width: 20%;
+    height: 270px;
+    margin-right: 5.1%;
     line-height: 40px;
     background-color: #eff2f6;
     position: fixed;
-    bottom: 20px;
-    right: 60px;
-}
-.fixed-menu ul {
-    list-style: none;
-    margin-left: -40px;
+    bottom: 0;
+    right: 0;    
 }
 .fixed-menu a {
     display: block;
-    text-decoration: none;
-    color: #e84a64;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 10px 30px;  
+    padding: 1% 3%;  
 }
