--- a/homework12/styles/fonts.css
+++ b/homework12/styles/fonts.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: 'open_sansregular';
-    src: url('fonts/opensans-400-normal-webfont.woff2') format('woff2'),
-         url('fonts/opensans-400-normal-webfont.woff') format('woff');
+    src: url('/homework12/fonts/opensans-400-normal-webfont.woff2') format('woff2'),
+         url('/homework12/fonts/opensans-400-normal-webfont.woff') format('woff'),
+         url('/homework12/fonts/opensans-400-normal-webfont.ttf') format('ttf');
     font-weight: normal;
     font-style: normal;
 }
