--- a/homework12/styles/main.css
+++ b/homework12/styles/main.css
@@ -1,14 +1,14 @@
 body {
     font-family: 'Roboto', 'open_sansregular', sans-serif;
 }
-nav.navbar {
+.navbar {
     background: rgb(0, 0, 0, .7);
 }
-nav .navbar-brand{
+.navbar-brand{
     font-weight: 600;
     font-size: 1em;
 }
-nav .nav-link {
+.nav-link {
     font-weight: 600;
     font-size: .9em;
 }
