replaced file structure scss

--- a/homework16/scss/main.scss
+++ b/homework16/scss/main.scss
@@ -1,2 +1,9 @@
 @import 'fonts';
 @import 'theme/bootstrap';
+@import 'base';
+@import "components/module-1feedback_main";
+@import "components/module-2about_us";
+@import "components/module-3price";
+@import "components/module-4process";
+@import "components/module-5cards";
+@import "components/module-6contacts_footer";
