--- a/homework16/scss/theme/_custom-variables.scss
+++ b/homework16/scss/theme/_custom-variables.scss
@@ -1,3 +1,10 @@
+// container`s max-width
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1170px
+);
 
 // button
 $primary:       #ffc155;
