--- a/homework16/scss/_fonts.scss
+++ b/homework16/scss/_fonts.scss
@@ -4,6 +4,7 @@ $fonts-default: Arial, Veranda, sans-serif;
     font-family: 'Lato', $fonts-default;
     font-style: normal;
     font-weight: normal;
+    font-size: 20px;
     src: url("/homework16/fonts/Lato/Lato-Regular.ttf");
 }
 @font-face {
