--- a/homework16/scss/main.scss
+++ b/homework16/scss/main.scss
@@ -1,9 +1,10 @@
 @import 'fonts';
 @import 'theme/bootstrap';
 @import 'base';
-@import "components/module-1feedback_main";
-@import "components/module-2about_us";
-@import "components/module-3price";
-@import "components/module-4process";
-@import "components/module-5cards";
-@import "components/module-6contacts_footer";
+@import "components/module-header";
+@import "components/module-feedback_main";
+@import "components/module-about_us";
+@import "components/module-price";
+@import "components/module-process";
+@import "components/module-cards";
+@import "components/module-contacts_footer";
