--- a/homework16/scss/theme/_nav.scss
+++ b/homework16/scss/theme/_nav.scss
@@ -1,11 +1,7 @@
-.nav a {
-    color: $link-text;
-    font-family: 'Lato';
-    font-size: .65rem;
-  }
 .nav-link {
   @include hover-focus {
     background: $primary;
     color: white;
+    padding: 6px 18px;
   }
 }
