--- a/homework16/scss/theme/_buttons.scss
+++ b/homework16/scss/theme/_buttons.scss
@@ -1,9 +1,7 @@
 .btn-primary {
     font-size: 0.8rem;
-    // color: white;
-    // &:active,
-    // &:hover,
-    // &:focus {
-    //     color: white;
-    // }
+    @include hover-focus {
+      background: $primary;
+      color: white;
+    }
   }    
