--- a/homework16/scss/_base.scss
+++ b/homework16/scss/_base.scss
@@ -1,7 +1,12 @@
+body {
+    background: white;
+}    
 h1 {
     font-family: 'Ghotam';
-    font-weight: 900;
+    font-weight: 1000;
     font-size: 2.1rem;
+    letter-spacing: .8px;
+    margin: 0;
 }
 h2 {
     font-family: 'Ghotam';
@@ -13,19 +18,16 @@ h3 {
     font-weight: 900;
     font-size: 1rem;
 }
-body {
-    background: white;
-}    
-p {
-    font-family: 'OpenSans-reg';
-    font-weight: 500;
-    font-size: .8rem;
-    }   
 a {
     color: $link-text;
     font-family: 'Lato';
     font-size: 14px;
 }
+p {
+    font-family: 'OpenSans-reg';
+    font-weight: 500;
+    font-size: .8rem;
+    }   
     
 .services p, 
 .cards p,
