--- a/homework16/scss/main.scss
+++ b/homework16/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'base';
 @import "components/module-header";
 @import "components/module-feedback_main";
+@import "components/module-services";
 @import "components/module-about_us";
 @import "components/module-price";
 @import "components/module-process";
