--- a/homework16/scss/_base.scss
+++ b/homework16/scss/_base.scss
@@ -3,7 +3,7 @@ body {
 }    
 h1 {
     font-family: 'Ghotam';
-    font-weight: 1000;
+    font-weight: 900;
     font-size: 2.1rem;
     letter-spacing: .8px;
     margin: 0;
@@ -11,7 +11,10 @@ h1 {
 h2 {
     font-family: 'Ghotam';
     font-weight: 900;
-    font-size: 1.5rem; 
+    font-size: 1.8rem; 
+    letter-spacing: 1px;
+    margin: -4px 0 0 0;
+    // padding: 0;
 }
 h3 {  
     font-family: 'Lato-light';
@@ -25,7 +28,7 @@ a {
 }
 p {
     font-family: 'OpenSans-reg';
-    font-weight: 500;
+    font-weight: normal;
     font-size: .8rem;
     }   
     
@@ -37,4 +40,9 @@ p {
 .cards p,
 .contacts p, {
     color: $internal-text;
+}
+.subtitle {
+    font-size: 1.1rem;
+    margin: 0;
+    letter-spacing: .2px;
 }
