--- a/homework16/scss/components/_module-price.scss
+++ b/homework16/scss/components/_module-price.scss
@@ -1,23 +1,57 @@
 // price
 .price {
+    padding-top: 128px;
+    padding-bottom: 165px;
     background: $bckrnd-price;
-    &-cost {
-    vertical-align: -10px;
-    font-size: 2rem;
+    &-plans {
+        margin-top: 45px;
     }
-    &-dollar {
-    font-size: 1.5rem;
-    line-height: 2rem;
+    h3 {
+        font-size: 1.41rem;
+        padding-bottom: 20px;
+    }
+    &-plans {
+            p {
+        letter-spacing: 1px;
+        }
+    }
+    &-first,
+    &-thrd {
+        margin-top: 30px;
+        margin-bottom: 30px;        
+        h3 {
+            margin-top: 52px;
+        }
     }
     &-middle {
     background: $bckrnd-secondary;
-    
+    padding-bottom: 75px;        
         p {
         color: white;
         }
+        h3 {
+            margin-top: 83px;
+        }
+    }
+    &-cost {
+    vertical-align: -15px;
+    font-size: 4rem;
+    }
+    &-dollar {
+    font-size: 2.5rem;
+    line-height: 2rem;
+    }
+    .end-toppart {
+        margin-bottom: 28px;
     }
     &-items {
     border-top: 1px solid $border-blocks;
+    padding-top: 11px;
+    margin-bottom: 9px;
+    }
+    &-button {
+        padding: 10px 20px;
+        margin-top: 22px;
     }
 }
 p.price-outside {
