--- a/homework16/css/style.css
+++ b/homework16/css/style.css
@@ -7404,7 +7404,7 @@ p.price-outside {
 
 .process {
   padding-top: 152px;
-  padding-bottom: 154px;
+  padding-bottom: 150px;
 }
 .process-visual {
   margin-top: 105px;
@@ -7444,13 +7444,37 @@ p.price-outside {
 }
 
 .cards {
+  padding-top: 136px;
+  padding-bottom: 136px;
   background: #ffc155;
 }
+.cards-items {
+  margin-top: 54px;
+}
+.cards-items-left, .cards-items-right {
+  padding: 44px 20px 32px 0;
+  margin-bottom: 20px;
+}
+.cards-items-left {
+  margin-right: 3px;
+}
+.cards-items-right {
+  margin-left: 3px;
+}
 .cards-photo {
-  height: 20%;
+  margin-left: 30px;
+  width: 100%;
+  max-width: 120px;
+  height: auto;
 }
 .cards-name {
   color: #ffc155;
+}
+.cards-mesage {
+  font-size: .9rem;
+  letter-spacing: .2px;
+  line-height: 1.4rem;
+  margin-bottom: 20px;
 }
 .cards-mesage::before, .cards-mesage::after {
   position: absolute;
@@ -7459,13 +7483,10 @@ p.price-outside {
 }
 .cards-mesage::before {
   content: '\201c';
-  top: -12px;
-  left: 0;
+  left: -20px;
 }
 .cards-mesage::after {
-  content: '\201d';
-  bottom: 20px;
-  right: 25px;
+  content: '\201e';
 }
 
 .contacts-items {
