did PP at module_process.scss

--- a/homework16/scss/components/_module-contacts_footer.scss
+++ b/homework16/scss/components/_module-contacts_footer.scss
@@ -3,7 +3,7 @@
     border: 1px solid $border-blocks;
 }
 .address {
-    background: url(/homework16/img/big_earth.jpg) center no-repeat;
+    background: url(/img/big_earth.jpg) center no-repeat;
     background-size: 900px 449px, cover;
     height: 500px;    
     &-items {
