--- a/homework16/scss/components/_module-contacts-footer.scss
+++ b/homework16/scss/components/_module-contacts-footer.scss
@@ -1,40 +1,84 @@
 // contacts
-.contacts-items {
-    border: 1px solid $border-blocks;
-}
-.address {
-    background: url(/img/big_earth.jpg) center no-repeat;
-    background-size: 900px 449px, cover;
-    height: 500px;    
-    &-items {
-    background: $bckrnd-address;
-    width: 240px;
-    height: 240px;
+.contacts {
+    padding-top: 153px;
+    &-subscribe {
+        margin: 34px 9.3% 95px 9%;
     }
-    p {
-        font-size: .8rem;
-        &:last-child {
-        color: $text-hightlight;
+    &-items {
+        padding-top: 4px;
+        padding-bottom: 4px;
+        border: 1px solid $border-blocks;
+        &-name {
+            width: 33%;
+        }
+        &-mail {
+            width: 41.5%;
         }
     }
-}    
-.triangle-down {
-	width: 0;
-	height: 0;
-	border-left: 5px solid transparent;
-	border-right: 5px solid transparent;
-	border-top: 10px solid $bckrnd-address;
+    &-button {
+        padding-left: 52px;
+        padding-right: 52px;
+    }
+    .address {
+        margin-bottom: 67px;
+        background: url(/img/big_earth.jpg) center no-repeat;
+        background-size: 900px 449px, cover;
+        height: 500px;    
+        &-items {
+            background: $bckrnd-address;
+            width: 279px;
+            height: 279px;
+        }
+        h3 {
+            margin-top: 60px;
+            margin-bottom: 15px;
+            font-weight: normal;
+        }
+        p {
+            line-height: .6rem;
+            font-size: .9rem;
+            letter-spacing: .3px; 
+            &:last-child {
+                letter-spacing: .7px; 
+                line-height: .3rem;
+                color: $text-hightlight;
+            }
+        }
+        &-triangle {
+            width: 0;
+            height: 0;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-top: 10px solid $bckrnd-address;
+        }
+        &-logo {
+            margin-top: 9px;
+        }
+    }    
+    .nav-bot {
+        padding-top: 54px;
+        border-top: 1px solid $border-blocks;
+    }
+    &-phone {
+        margin-top: 10px;
+        .phone-img {
+            margin-top: 6px;
+            padding: 0 0 0 5px;    
+        }
+        .phone-number {
+            padding: 0;
+            margin-left: 5px;
+            line-height: 2rem;
+            font-size: 1.6rem;
+            font-weight: bold;
+        }
+    }
+    &-logo-items {
+        margin: 0 8px;
+    }
 }
-.nav-bot {
-    border-top: 1px solid $border-blocks;
-}
-.phone {
-    line-height: 2rem;
-    font-size: 2rem;
-    font-weight: bolder;
-}
-
-// footer
-.footer {
+    
+    // footer
+    .footer {
     background: $bckrnd-secondary;
 }
