--- a/homework16/scss/main.scss
+++ b/homework16/scss/main.scss
@@ -1,11 +1,4 @@
+@import 'vars';
 @import 'fonts';
-@import 'theme/bootstrap';
 @import 'base';
-@import "components/module-header";
-@import "components/module-feedback-main";
-@import "components/module-services";
-@import "components/module-about-us";
-@import "components/module-price";
-@import "components/module-process";
-@import "components/module-cards";
-@import "components/module-contacts-footer";
+@import "components/ALLcomponents";
