--- a/homework16/scss/components/_module-about-us.scss
+++ b/homework16/scss/components/_module-about-us.scss
@@ -16,7 +16,7 @@
             letter-spacing: .3px;
         }
     }
-    button {
+    &-button {
         margin: 13px 0 0 16px;
         padding: 10px 31px;
         border: 1px solid #e7ad48;
