--- a/homework16/scss/components/_module-header.scss
+++ b/homework16/scss/components/_module-header.scss
@@ -3,10 +3,9 @@
         margin: 21px 0;
     }
     &-menu {
-        margin: 18px 0px;
-
+        margin: 18px -5px;
         a {
-            padding: 0 16px 0 20px;
+            padding: 0 18px;
         }
     }
 }
