--- a/homework16/scss/components/_module-services.scss
+++ b/homework16/scss/components/_module-services.scss
@@ -1,51 +1,43 @@
 .services {
-    padding: 195px 0 137px 0;
-    
+    padding: 195px 0 80px 0;    
     h3 {
         margin: 0 0 13px 0;
     }
     &-main {
         padding-top: 87px;        
         p {
-            font-size: .9rem;
+            font-size: .95rem;
             letter-spacing: .3px;
         }    
     }
-    &-clock {
+    &-items {
+        p {
+            font-size: .8rem;
+            letter-spacing: .5px;
+            line-height: 1.4rem;
+        }
         padding: 0 0 55px 0;
+        margin: 0;
         .clock-img {
             padding: 0;
-            margin: 0 23px 0 0;
+            margin: 0 22px 0 0;
         }    
-    }
-    &-studi{
-        padding: 0 0 58px 0;
         .studi-img {
             padding: 0;
-            margin: 0 5px 0 0;
+            margin: 3px 5px 0 0;
         }
-    }
-    &-code {
         .code-img {
             padding: 0;
             margin: 0 22px 0 0;
         }
-    }
-    &-respons {
-        padding: 0 0 55px 0;
         .respons-img {
             margin: 0 0 0 17px;
         }
-    }
-    &-rocket {
-        padding: 0 0 58px 0;
         .rocket-img {
             margin: 0 0 0 17px;
         }
-    }
-    &-dollar {
         .dollar-img {
-            margin: 0 0 0 31px;
+            margin: -4px 0 0 33px;
         }
     }
 }
