--- a/homework16/scss/components/_module-about-us.scss
+++ b/homework16/scss/components/_module-about-us.scss
@@ -3,17 +3,19 @@
     color: white;
     background: $bckrnd-hightlight;
     h2 {
-        font-weight: bolder;
+    }
+    &-img {
+        max-height: 623px;
     }
     &-article {
-    margin-top: 160px;
-    margin-left: 4rem;
+    margin-top: 157px;
+    margin-left: 4.1rem;
         p {
-            margin-top: 18px; 
+            margin-top: 16px; 
             padding-right: 0;
-            font-size: 1rem;
+            font-size: .84rem;
             line-height: 1.5rem;
-            letter-spacing: .3px;
+            letter-spacing: .8px;
         }
     }
     &-button {
